# monolithwPCG

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Monolith.uplugin  README.md
Docs/: API_REFERENCE.md  NEW_MONOLITH_TESTING.md  OPTIONAL_MODULES.md  OPTIONAL_MODULE_ARCHITECTURE.md  SPEC.md  TESTING.md  TODO.md  TODO_VFX_Issues.md  WISHLIST.md
Docs/plans/: 2026-03-28-advanced-procgen-research.md  2026-03-28-ai-vision-upgrade-research.md  2026-03-28-asset-scanning-research.md  2026-03-28-attachment-logic-research.md  2026-03-28-auto-collision-research.md  2026-03-28-auto-volumes-research.md  2026-03-28-blueprint-prefab-research.md  2026-03-28-boolean-doors-research.md  2026-03-28-city-block-layout-research.md  2026-03-28-connected-room-assembly-research.md  2026-03-28-daredevil-debug-view-research.md  2026-03-28-door-clearance-research.md  2026-03-28-facade-alignment-research.md  2026-03-28-facade-window-research.md  2026-03-28-fallback-piece-generation-research.md  2026-03-28-fix-plan-v4-templates.md  2026-03-28-geometryscript-deep-dive-research.md  2026-03-28-github-procgen-repos-research.md  2026-03-28-grid-detection-research.md  2026-03-28-ground-aware-scale-research.md  2026-03-28-hism-assembly-research.md  2026-03-28-hybrid-gs-pcg-research.md  (+40 more)
Scripts/: index_project.py  make_release.ps1  monolith_proxy.bat  monolith_proxy.py
Skills/: unreal-blueprints.md  unreal-materials.md  unreal-niagara.md
Templates/: .mcp.json.proxy.example  CLAUDE.md.example
Tools/MonolithProxy/: CMakeLists.txt  README.md  build.bat  build_proxy.bat  monolith_proxy.cpp
(+358 files in other folders)
