cmake_minimum_required(VERSION 3.16)
project(MonolithProxy LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(monolith_proxy monolith_proxy.cpp)
target_include_directories(monolith_proxy PRIVATE ThirdParty)
target_link_libraries(monolith_proxy PRIVATE winhttp)
if(MSVC)
    set_property(TARGET monolith_proxy PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
endif()
